2002-01-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (LDADD): Use @LTLIBINTL@ instead of @INTLLIBS@.
	(libgettextsrc_la_LDFLAGS): Likewise. Use @LTLIBICONV@ instead of
	@LIBICONV@.

2002-01-21  Bruno Haible  <bruno@clisp.org>

	* msggrep.c (main): On SunOS4, don't pass option "-q" to grep.

2002-01-19  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c (check_header_entry): Emit error messages including the
	file name.

2002-01-19  Bruno Haible  <bruno@clisp.org>

	* open-po.c (open_po_file): Use 'size_t' instead of 'int'.
	* x-java.l (translate_esc): Likewise.
	* read-mo.c (read_mo_file): Use 'unsigned int' instead of 'int'.

2002-01-13  Bruno Haible  <bruno@clisp.org>

	* msgl-iconv.c (iconv_message_list): Don't complain by a nonportable
	encoding name if it has been overridden by an argument canon_from_code.

2002-01-13  Bruno Haible  <bruno@clisp.org>

	* msgl-ascii.c (is_ascii_message): Don't consider a message as being
	ASCII if its msgid or msgid_plural is not ASCII.

2002-01-12  Bruno Haible  <bruno@clisp.org>

	* gettext.c (main): Update year in --version output.
	* ngettext.c (main): Likewise.
	* msgattrib.c (main): Likewise.
	* msgcat.c (main): Likewise.
	* msgcmp.c (main): Likewise.
	* msgcomm.c (main): Likewise.
	* msgconv.c (main): Likewise.
	* msgen.c (main): Likewise.
	* msgexec.c (main): Likewise.
	* msgfilter.c (main): Likewise.
	* msgfmt.c (main): Likewise.
	* msggrep.c (main): Likewise.
	* msginit.c (main): Likewise.
	* msgmerge.c (main): Likewise.
	* msgunfmt.c (main): Likewise.
	* msguniq.c (main): Likewise.
	* xgettext.c (main): Likewise.

2002-01-11  Bruno Haible  <bruno@clisp.org>

	* write-po.c: Include po-charset.h.

2002-01-11  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c (install_sigfpe_handler, uninstall_sigfpe_handler): On AIX,
	treat SIGTRAP like SIGFPE.

2002-01-09  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c (USE_SIGINFO): New macro.
	(sigfpe_code, sigfpe_handler, install_sigfpe_handler,