@@ -1,5 +1,5 @@
 /* Object Pascal format strings.
-   Copyright (C) 2001 Free Software Foundation, Inc.
+   Copyright (C) 2001-2002 Free Software Foundation, Inc.
    Written by Bruno Haible <haible@clisp.cons.org>, 2001.
 
    This program is free software; you can redistribute it and/or modify
@@ -400,7 +400,7 @@ format_check (pos, msgid_descr, msgstr_descr, equality, noisy, pretty_msgstr)
 		{
 		  error_with_progname = false;
 		  error_at_line (0, 0, pos->file_name, pos->line_number,
-				 _("a format specification for argument {%u}, as in '%s', doesn't exist in 'msgid'"),
+				 _("a format specification for argument %u, as in '%s', doesn't exist in 'msgid'"),
 				 spec2->numbered[j].number, pretty_msgstr);
 		  error_with_progname = true;
 		}
@@ -415,7 +415,7 @@ format_check (pos, msgid_descr, msgstr_descr, equality, noisy, pretty_msgstr)
 		    {
 		      error_with_progname = false;
 		      error_at_line (0, 0, pos->file_name, pos->line_number,
-				     _("a format specification for argument {%u} doesn't exist in '%s'"),
+				     _("a format specification for argument %u doesn't exist in '%s'"),
 				     spec1->numbered[i].number, pretty_msgstr);
 		      error_with_progname = true;
 		    }
@@ -440,7 +440,7 @@ format_check (pos, msgid_descr, msgstr_descr, equality, noisy, pretty_msgstr)
 		      {
 			error_with_progname = false;
 			error_at_line (0, 0, pos->file_name, pos->line_number,
-				       _("format specifications in 'msgid' and '%s' for argument {%u} are not the same"),
+				       _("format specifications in 'msgid' and '%s' for argument %u are not the same"),
 				       pretty_msgstr,
 				       spec2->numbered[j].number);
 			error_with_progname = true;
